tajo-core-tests/src/test/resources/results/TestTajoCliNegatives/testQuerySyntax.result
ERROR: syntax error at or near "-"
LINE 1: select * from unknown-table
                             ^
